testdata/corset/invalid/compute_invalid_04.lisp
;;error:3:19-22:unknown symbol
(defcolumns (X :i16))
(defcomputed (Y) (nid X))
